chore: performance improvements

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/web_64x64.png" />
-
+    <meta name="description" content="Joseph - Front end developer" />
     <title>icyJoseph</title>
   </head>
 
